# software-center

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  meson.build  shell.nix
.github/workflows/: build.yml
data/: meson.build  org.xinux.NixSoftwareCenter.gschema.xml.in  org.xinux.NixSoftwareCenter.metainfo.xml.in.in  org.xinux.NixSoftwareCenter.policy.in.in
data/resources/: resources.gresource.xml  style.css
nsc-helper/src/: main.rs  meson.build
po/: LINGUAS  POTFILES.in  result  ru.po  translations.pot  uz.po
shells/nix-software-center/: default.nix
shells/nixos-conf-editor/: default.nix
src/: main.rs  meson.build
src/parse/: config.rs  packages.rs  util.rs
src/ui/: about.rs  categories.rs  categorypage.rs  categorytile.rs  installedpage.rs  installworker.rs  pkgpage.rs  pkgtile.rs  preferencespage.rs  rebuild.rs  screenshotfactory.rs  searchpage.rs  unavailabledialog.rs  updatepage.rs  updateworker.rs  welcome.rs  window.rs  windowloading.rs
