[package]
name = "nix-software-center"
version = "0.1.2"
edition = "2024"
default-run = "nix-software-center"
authors = [
  "Sokhibjon Orzikulov <sakhib@orzklv.uz>",
  "Victor Fuentes <vlinkz@snowflakeos.org>",
]

[dependencies]
# GNOME crates
relm4 = { version = "0.9.1", features = ["libadwaita", "macros", "gnome_47"] }
relm4-components = { package = "relm4-components", version = "0.9.1" }
sourceview5 = { version = "0.9.1" }
# adw = { package = "libadwaita", version = "0.4", features = [
#   "v1_2",
#   "gtk_v4_6",
# ] }
# gtk = { package = "gtk4", version = "0.6", features = ["v4_6"] }

gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
nix-editor = "0.3.0"
nix-data-xinux = "0.0.5"
tokio = { version = "1.49", features = [
  "rt",
  "macros",
  "time",
  "rt-multi-thread",
  "sync",
  "process",
] }
tracker = "0.2"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
html2pango = "0.6"
log = "0.4.29"
pretty_env_logger = "0.5"
flate2 = "1.1.8"
quick-xml = { version = "0.39", features = ["serialize"] }
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
sha256 = "1.6.0"
image = "0.25.9"
spdx = "0.13.3"
anyhow = "1.0.100"

[workspace]
members = [".", "nsc-helper"]
default-members = [".", "nsc-helper"]
